k8s/demo-hosts/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rws-keycloak-public
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  ingressClassName: nginx
  rules:
    - host: ${KC_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${KEYCLOAK_SERVICE_NAME}
                port:
                  number: ${KEYCLOAK_SERVICE_PORT}
