k8s/demo-hosts/midpoint-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: midpoint
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  ingressClassName: nginx
  rules:
    - host: ${MP_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${MIDPOINT_SERVICE_NAME}
                port:
                  number: ${MIDPOINT_SERVICE_PORT}
